# bevy_game_tutorial

./: .gitignore  Cargo.toml  README.md
src/: tutorial01.rs  tutorial02.rs  tutorial03.rs  tutorial04.rs  tutorial05.rs
src/tutorial06/: bullet_plugin.rs  components.rs  player_ship_plugin.rs  tutorial06.rs
src/tutorial07/: bullet_plugin.rs  collision_plugin.rs  components.rs  enemy_plugin.rs  player_ship_plugin.rs  tutorial07.rs
tutorial/: tutorial01.md  tutorial02.md  tutorial03.md  tutorial04.md  tutorial05.md  tutorial06.md  tutorial07.md
