[package]
name = "game"
version = "0.1.0"
authors = ["naodroid <naodroid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"

[[bin]]
name = "tutorial01"
path = "src/tutorial01.rs"

[[bin]]
name = "tutorial02"
path = "src/tutorial02.rs"

[[bin]]
name = "tutorial03"
path = "src/tutorial03.rs"

[[bin]]
name = "tutorial04"
path = "src/tutorial04.rs"

[[bin]]
name = "tutorial05"
path = "src/tutorial05.rs"
