[package]
name = "game"
version = "0.1.0"
authors = ["naodroid <naodroid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
rand = "0.8.3"

[[bin]]
name = "tutorial01"
path = "src/tutorial01.rs"

[[bin]]
name = "tutorial02"
path = "src/tutorial02.rs"

[[bin]]
name = "tutorial03"
path = "src/tutorial03.rs"

[[bin]]
name = "tutorial04"
path = "src/tutorial04.rs"

[[bin]]
name = "tutorial05"
path = "src/tutorial05.rs"

[[bin]]
name = "tutorial06"
path = "src/tutorial06/tutorial06.rs"

[[bin]]
name = "tutorial07"
path = "src/tutorial07/tutorial07.rs"

[[bin]]
name = "tutorial08"
path = "src/tutorial08.rs"
